--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: user/app:latest
+          tags: dmitriyshub/tmdb-api:latest
           
 #     - uses: actions/checkout@v3
 #     - name: Build the Docker image
