--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3"
 services:
   app:
-    build: .
+    image: dmitriyshub/tmdb-api:latest
+    #build: .
     volumes:
       - ./secret:/app/secret
     depends_on:
