--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,5 @@
 #docker ignore file
-
+#
 .git
 .gitignore
 .idea
@@ -9,10 +9,14 @@ __pycache__
 **/__pycache__
 venv
 
-
+# Repo files
 secret
 secret/*
+**/secret/*
 First
 First/*
 *.jpeg
 **/*.jpeg
+
+# Terraform
+**/*.tf
