--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -40,7 +40,7 @@ jobs:
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: terraform fmt -check
+      run: terraform fmt -list=true -write=false -diff=true -check=true
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
