add options to workflow dispatcher

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,7 +7,15 @@
 
 name: 'Terraform'
 
-on: [workflow_dispatch]
+on:
+  workflow_dispatch:
+    inputs:
+      name:
+        type: choice
+        description: Terraform
+        options:
+          - Apply
+          - Destroy
 
 permissions:
   contents: read
@@ -50,4 +58,10 @@ jobs:
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       #if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
+      if: github.event.inputs.name == 'Apply'
       run: terraform apply -auto-approve -input=false
+
+    - name: Terraform Destroy
+      if: github.event.inputs.name == 'Destroy'
+      run: terraform destroy -auto-approve -input=false
+
