--- a/.github/workflows/terraformdestroy.yml
+++ b/.github/workflows/terraformdestroy.yml
@@ -4,7 +4,7 @@
 # to the "main" branch, `terraform apply` will be executed.
 #
 # Documentation for `hashicorp/setup-terraform` is located here: https://github.com/hashicorp/setup-terraform
-name: 'Terraform'
+name: 'Terraform-Destroy'
 on: [workflow_dispatch]
 permissions:
   contents: read
