--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 #git ignore file
 
 secret/config.py
-
+secret/.env
 content/*.jpeg
-
 #first project
 First/MODfirst/.env
 First/MODfirst/.env/*
+.env
+
 
 
 
