--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,5 @@
 #docker ignore file
-#
+#local files
 .git
 .github
 .gitignore
@@ -18,6 +18,7 @@ First
 First/*
 *.jpeg
 **/*.jpeg
+ec2-user-data.sh
 
 # Terraform
 **/*.tf
