--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,11 +28,11 @@ jobs:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: terraform init ./terraform
+      run: terraform init
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: terraform fmt ./terraform
+      run: terraform fmt
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
