--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,7 +28,7 @@ jobs:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: terraform -chdir="./terraform" init
+      run: terraform -chdir="./terraform/" init
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
@@ -36,9 +36,9 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform -chdir="./terraform" plan -input=false
+      run: terraform -chdir="./terraform/" plan -input=false
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       #if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform -chdir="./terraform" apply -auto-approve -input=false ./terraform
+      run: terraform -chdir="./terraform/" apply -auto-approve -input=false ./terraform
